# fronda

./: .gitignore  .spectra.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  NOTICE.md  README.md  appcast.xml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
Sources/PalmierPro/Account/: AccountPopoverCard.swift  AccountService.swift  IdentityStrip.swift
Sources/PalmierPro/App/: AppDelegate.swift
Sources/PalmierPro/Editor/: TitleBarView.swift
Sources/PalmierPro/Export/: ExportService.swift  ExportView.swift
Sources/PalmierPro/Generation/: GenerationService.swift
Sources/PalmierPro/Inspector/: InspectorView.swift
Sources/PalmierPro/Preview/: CompositionBuilder.swift  ImageVideoGenerator.swift
Sources/PalmierPro/Project/: HomeView.swift  VideoProject.swift
Sources/PalmierPro/Resources/: Info.plist
Sources/PalmierPro/Settings/: SettingsView.swift
Sources/PalmierPro/Timeline/: ClipRenderer.swift  TimelineInputController.swift  TimelineView.swift
Sources/PalmierPro/Transcription/: Transcription.swift
Sources/PalmierPro/UI/: AppTheme.swift  SidebarRowButton.swift
Sources/PalmierPro/Utilities/: ImageEncoder.swift
Tests/PalmierProTests/Agent/: RemoveTracksTests.swift  ToolExecutorTests.swift
Tests/PalmierProTests/Captions/: TranscriptionLocaleTests.swift
Tests/PalmierProTests/Media/: MediaPanelTests.swift  ProjectRoundTripTests.swift
Tests/PalmierProTests/Rendering/: RGBAHexTests.swift
crates/agent_contract/: Cargo.toml
crates/agent_contract/src/: agent_loop.rs  envelope.rs  hex_color_parser.rs  id_short.rs  lib.rs  mention.rs  mutation.rs  organize.rs  prompt_caching.rs  read_tools.rs  session.rs  test_helpers.rs  timeline_v2.rs  tool_exec.rs  tools.rs  undo.rs
crates/agent_contract/tests/: port_undo_tool_tests.rs  spec_multicam_tools.rs  spec_session_persistence.rs  spec_tool_snapshots.rs
crates/app_contract/: Cargo.toml
crates/app_contract/src/: agent_panel_model.rs  app_state_machine.rs  chat_model.rs  editor_playhead.rs  feedback.rs  feedback_model.rs  focus_router.rs  help_content.rs  help_model.rs  lib.rs  media_grid_nav.rs  mention_picker.rs  pane_visibility.rs  runtime_metadata.rs  session_manager.rs  settings_model.rs  settings_storage.rs  shortcut_defs.rs  telemetry.rs  ui_constants.rs  update_badge.rs  version_check.rs  window_constants.rs
crates/app_shell_gpui/: Cargo.toml  README.md  build.rs
crates/app_shell_gpui/src/: account_view.rs  agent_bridge.rs  agent_panel_view.rs  ai_edit_tab_view.rs  anthropic_transport.rs  app_root.rs  assets.rs  audio_export.rs  audio_playback.rs  audio_source.rs  chat_history_view.rs  chat_view.rs  chroma_controls.rs  chroma_sampling.rs  context_menu.rs  crop_overlay_view.rs  editor_state_hub.rs  editor_view.rs  export_host.rs  export_model.rs  export_queue.rs  export_view.rs  feedback_view.rs  field_components.rs  generation_view.rs  global_shortcuts.rs  help_view.rs  home_model.rs  home_view.rs  http_generation_backend.rs  inspector_model.rs  inspector_view.rs  keyframes_view.rs  lib.rs  main.rs  matte_writer.rs  mcp_service.rs  media_import.rs  media_panel_model.rs  media_panel_view.rs  (+39 more)
crates/audio_core/: Cargo.toml
crates/audio_core/src/: audio_meter.rs  audio_mixer.rs  audio_sync_correlator.rs  beat_detector.rs  lib.rs  silence_detector.rs  wav.rs
crates/core_model/: Cargo.toml
crates/core_model/src/: agent.rs  date_serde.rs  effect.rs  generation_log.rs  lib.rs  library.rs  matte.rs  media_manifest.rs  multicam.rs  project_file.rs  project_registry.rs  shape_style.rs  text_animation.rs  timeline.rs  video_layout.rs
crates/core_model/tests/: compatibility.rs
crates/generation_core/: Cargo.toml
crates/generation_core/src/: backend_config.rs  export_panel.rs  generation_payload.rs  lib.rs  llm_config.rs  model_catalog.rs
crates/generation_core/tests/: property_generation.rs  spec_generation_workflow.rs
crates/generation_gateway/: Cargo.toml
crates/generation_gateway/src/: config.rs  gemini.rs  jobs.rs  lib.rs  main.rs  pollinations.rs  protocol.rs  provider.rs  registry.rs  results.rs  server.rs  stub.rs
crates/generation_gateway/tests/: gateway_http.rs  gemini_pipeline.rs  pollinations_pipeline.rs
crates/mcp_server/: Cargo.toml
crates/mcp_server/src/: json_rpc.rs  lib.rs  server.rs  session.rs
crates/mcp_server/tests/: spec_mcp_contract.rs  spec_mcp_sessions.rs
crates/media_library/: Cargo.toml
crates/media_library/src/: lib.rs  media_import.rs  pasteboard_import.rs  sample_projects.rs  save_as_media.rs
crates/project_io/: Cargo.toml
crates/project_io/src/: lib.rs  project_duplicate.rs
crates/project_io/tests/: project_bundle.rs
crates/render_core/: Cargo.toml
crates/render_core/src/: audio_plan.rs  bundle_export.rs  compositor.rs  effects.rs  export_stall_watchdog.rs  fcpxml_export.rs  lib.rs  lut.rs  preview.rs  text.rs  xml_export.rs  xml_import.rs
crates/render_core/tests/: spec_composition_plan.rs  spec_xml_export.rs
crates/search_core/: Cargo.toml
crates/search_core/src/: caption.rs  lib.rs  locale.rs  search_index.rs  search_lifecycle.rs  transcript.rs
crates/search_core/tests/: port_caption_builder_tests.rs  port_transcription_locale_tests.rs  spec_caption.rs  spec_search_index.rs  (+1 more)
crates/search_visual/: Cargo.toml
crates/timeline_core/: Cargo.toml
models/: README.md
models/siglip2/: MODEL_CARD.md  README.md
scripts/: check_rust_rewrite_specs.py
specs/rust-rewrite/: 00-runtime-packaging-design-and-shell.md  01-foundation-and-project-model.md  02-media-library-and-project-workflows.md  03-timeline-editor-and-preview.md  04-export-rendering-and-interchange.md  05-agent-mcp-and-chat.md  06-search-transcription-generation-and-shell.md  07-ui-port-spec.md  10-current-status-and-plan.md  11-identifier-migration-plan.md  12-audio-sync.md  13-nested-xml-export.md  97-upstream-pr-audit.md  98-generation-protocol.md  98-ui-parity-audit.md  98-verification-plan.md  99-decisions-2026-07-17.md  99-test-matrix.md  HANDOFF-2026-07-12.md  README.md  VERIFY-2026-07-17-macos-shell.md  VERIFY-2026-07-18-generation-gateway.md
(+380 files in other folders)
