[workspace]
members = [
    "crates/agent_contract",
    "crates/app_shell_gpui",
    "crates/core_model",
    "crates/project_io",
    "crates/render_core",
    "crates/search_core",
    "crates/timeline_core",
]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
tempfile = "3"
proptest = "1"
