[workspace]
members = [
    "crates/agent_contract",
    "crates/app_contract",
    "crates/app_shell_gpui",
    "crates/mcp_server",
    "crates/core_model",
    "crates/project_io",
    "crates/render_core",
    "crates/search_core",
    "crates/timeline_core",
    "crates/generation_core",
    "crates/media_library",
    "crates/audio_core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
tempfile = "3"
proptest = "1"
