[workspace]
members = [
    "crates/agent_contract",
    "crates/app_contract",
    "crates/app_shell_gpui",
    "crates/mcp_server",
    "crates/core_model",
    "crates/project_io",
    "crates/render_core",
    "crates/search_core",
    "crates/timeline_core",
    "crates/generation_core",
    "crates/media_library",
    "crates/audio_core",
    "crates/search_visual",
]
resolver = "2"

[workspace.package]
version = "0.6.5"
edition = "2021"

# Opinionated clippy lints allowed project-wide. These fire on intentional
# patterns (complex callback types, many-arg export fns, `from_str` helpers,
# builder-style default+reassign) that a newer clippy started flagging in
# pre-existing code. Allowed so the (toolchain-pinned) CI clippy gate stays
# meaningful — genuine lints are still denied via `-D warnings`.
[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
field_reassign_with_default = "allow"
doc_lazy_continuation = "allow"
cloned_ref_to_slice_refs = "allow"
single_range_in_vec_init = "allow"
should_implement_trait = "allow"
needless_range_loop = "allow"
needless_update = "allow"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
tempfile = "3"
proptest = "1"
