[package]
name = "fronda-agent-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "agent_contract"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
core_model = { package = "fronda-core-model", path = "../core_model" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
