[package]
name = "fronda-app-shell-gpui"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "app_shell_gpui"
path = "src/lib.rs"

[[bin]]
name = "fronda"
path = "src/main.rs"
required-features = ["desktop-app"]

[features]
default = []
desktop-app = ["dep:gpui", "dep:gpui_platform"]

[dependencies]
agent_contract = { package = "fronda-agent-contract", path = "../agent_contract" }
anyhow = { workspace = true }
chrono = { workspace = true }
app_contract = { package = "fronda-app-contract", path = "../app_contract" }
core_model = { package = "fronda-core-model", path = "../core_model" }
generation_core = { package = "fronda-generation-core", path = "../generation_core" }
gpui = { git = "https://github.com/gpui-ce/gpui-ce", optional = true }
gpui_platform = { git = "https://github.com/gpui-ce/gpui-ce", optional = true }
mcp_server = { package = "fronda-mcp-server", path = "../mcp_server" }
project_io = { package = "fronda-project-io", path = "../project_io" }
timeline_core = { package = "fronda-timeline-core", path = "../timeline_core" }
render_core = { path = "../render_core" }
serde = { workspace = true }
serde_json = { workspace = true }
ffmpeg-the-third = { version = "5.0.0", default-features = false, features = ["codec", "format", "software-scaling", "software-resampling"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
