[package]
name = "fronda-generation-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "generation_core"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
core_model = { package = "fronda-core-model", path = "../core_model" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
