[package]
name = "fronda-mcp-server"
version = "0.6.5"
edition = "2021"
publish = false

[lib]
name = "mcp_server"

[dependencies]
serde.workspace = true
serde_json.workspace = true
agent_contract = { package = "fronda-agent-contract", path = "../agent_contract" }

[dev-dependencies]
core_model = { package = "fronda-core-model", path = "../core_model" }
