[package]
name = "fronda-media-library"
version = "0.6.5"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
fronda-core-model = { path = "../core_model" }

[lints]
workspace = true
