[package]
name = "fronda-project-io"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "project_io"
path = "src/lib.rs"

[dependencies]
core_model = { package = "fronda-core-model", path = "../core_model" }
search_core = { package = "fronda-search-core", path = "../search_core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
search_core = { package = "fronda-search-core", path = "../search_core" }
tempfile.workspace = true
