[package]
name = "render_core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "render_core"
path = "src/lib.rs"

[dependencies]
core_model = { package = "fronda-core-model", path = "../core_model" }
timeline_core = { package = "fronda-timeline-core", path = "../timeline_core" }
audio_core = { package = "fronda-audio-core", path = "../audio_core" }
ab_glyph = "0.2"
serde.workspace = true
serde_json.workspace = true
